--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ debugpy==1.8.7
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.9
+dj-database-url==2.3.0
 Django==5.1.2
 django-bootstrap-v5==1.0.11
 djangorestframework==3.15.2
@@ -107,6 +108,7 @@ pylint-django==2.6.1
 pylint-plugin-utils==0.8.2
 python-box==5.1.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.2
 PyYAML==5.3.1
@@ -139,6 +141,7 @@ tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241003
+typing_extensions==4.12.2
 tzdata==2024.2
 uri-template==1.3.0
 urllib3==2.2.3
